# censusify

./: .gitignore  README.md  presentation.py  pyproject.toml
src/d3census/: __init__.py  censusified_in_abstract.py  censusify.py  edition.py  geography.py  lookuper.py  requestmanager.py
src/d3census/geography/: B01001.py  B01001A.py  B01001B.py  B01001C.py  B01001D.py  B01001E.py  B01001F.py  B01001G.py  B01001H.py  B01001I.py  B01002.py  B01002A.py  B01002B.py  B01002C.py  B01002D.py  B01002E.py  B01002F.py  B01002G.py  B01002H.py  B01002I.py  B01003.py  B02001.py  B02008.py  B02009.py  B02010.py  B02011.py  B02012.py  B02013.py  B02014.py  B02015.py  B02016.py  B02017.py  B02018.py  B02019.py  B03001.py  B03002.py  B03003.py  B04004.py  B04005.py  B04006.py  (+1107 more)
tests/: ast_test.py  example.py  geoset.py  tests.py
