[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "d3census"
version = "0.1.5"
authors = [
    { name="Mike Vickers", email="mike@datadrivendetroit.org" },
]
description = "A strange but useful python interface to the census API"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiohttp",
    "returns",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[project.urls]
# "Homepage" = "https://github.com/mikevatd3/d3geocoder"
# "Bug Tracker" = "https://github.com/mikevatd3/d3geocoder/issues"
